[metadata]
name = kabbes_web_traffic_monitor
version = 0.2.0
author = James Kabbes
author_email = james.kabbes@gmail.com
description = System for tracking web traffic
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/kabbes-web-traffic-monitor/
project_urls =
    GitHub = https://github.comjameskabbes/web_traffic_monitor
    Documentation = https://jameskabbes.github.io/web_traffic_monitor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages =
    web_traffic_monitor
python_requires = >=3.7
install_requires = 

[options.packages.find]
where = src